tests/fsharp/typecheck/sigs/neg100.bsl

neg100.fs(9,12,9,16): typecheck error FS3218: The argument names in the signature 'xxxx' and implementation 'qqqq' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(8,12,8,16): typecheck error FS3218: The argument names in the signature 'xxx' and implementation 'qqqq' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(7,12,7,16): typecheck error FS3218: The argument names in the signature 'xx' and implementation 'qqqq' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(6,12,6,16): typecheck error FS3218: The argument names in the signature 'x' and implementation 'qqqq' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(15,17,15,22): typecheck error FS3218: The argument names in the signature 'xxxx' and implementation 'qqqq3' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(14,17,14,22): typecheck error FS3218: The argument names in the signature 'xxx' and implementation 'qqqq3' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(13,17,13,22): typecheck error FS3218: The argument names in the signature 'xx' and implementation 'qqqq3' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(12,17,12,22): typecheck error FS3218: The argument names in the signature 'x' and implementation 'qqqq3' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.

neg100.fs(11,9,11,14): typecheck error FS3218: The argument names in the signature 'aaa' and implementation 'qqqq2' do not match. The argument name from the signature file will be used. This may cause problems when debugging or profiling.
