tests/fsharp/typecheck/sigs/neg100.fsi


module M

val ffff : int -> int
val gggg1 : x: int -> int
val gggg2 : xx: int -> int
val gggg3 : xxx: int -> int
val gggg4 : xxxx: int -> int

type C = 
 new : aaa : int -> C
 member M1 : x:int -> unit
 member M2 : xx:int -> unit
 member M3 : xxx:int -> unit
 member M4 : xxxx:int -> unit
